--- a/src/app/features/products/pages/products-page/products-page.component.html
+++ b/src/app/features/products/pages/products-page/products-page.component.html
@@ -17,6 +17,7 @@
   ></app-products-list>
 
   <app-products-pagination
+    [totalCount]="productsFacadeService.productsFormService.totalCountProducts"
     [productsPaginationForm]="
       productsFacadeService.productsFormService.paginationForm
     "
