--- a/src/app/features/products/components/products-pagination/products-pagination.component.html
+++ b/src/app/features/products/components/products-pagination/products-pagination.component.html
@@ -1,5 +1,6 @@
 <mat-paginator
-  [length]="100"
+  [pageIndex]="productsFormService.paginationIndex"
+  [length]="totalCount"
   [pageSize]="10"
   [pageSizeOptions]="[5, 10, 20]"
   (page)="productsFormService.updatePagination($event)"
